--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <title>Vishal Shah</title>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+
+  <script type="text/javascript">
+    $(".showMoreBtn").click(function(){
+      $("#moreProjectsWrapper").toggleClass("displayNone");
+      $(".showMoreBtn").toggleClass("displayNone");
+    })
+  </script>
 </html>
